--- a/index.html
+++ b/index.html
@@ -1,253 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
-  <meta name="theme-color" content="#0b0b0b" />
-  <title>UI</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
+  <title>Game UI Shell v2</title>
   <style>
     :root {
-      --app-height: 100dvh;
-      /* layout */
-      --gap: 0;
-      --bg: #0e0f12;
-      --outline-w: 2px;
-      /* accent (dark green) */
-      --teal: #0b5d3b; /* was pink, now dark green */
+      --max-phone-width: 420px;
+      --top-height: 10vh;       /* slim top section */
+      --bottom-height: 25vh;    /* large bottom section */
+      --border-radius: 24px;
     }
 
-    html, body {
-      padding: 0; margin: 0; height: 100%;
-      background: var(--bg);
-      color: transparent; /* keep rest of the UI textless */
-      overscroll-behavior: none;
-      -webkit-tap-highlight-color: transparent;
-      touch-action: manipulation;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
-    }
-
-    .app {
-      height: var(--app-height);
-      min-height: 100svh;
-      max-height: 100lvh;
-      display: grid;
-      /* Top & bottom each ~15% of the full game height */
-      grid-template-rows: minmax(0,15%) 1fr minmax(0,15%);
-      grid-template-columns: 100%;
-      gap: var(--gap);
-      padding-top: env(safe-area-inset-top);
-      padding-bottom: env(safe-area-inset-bottom);
-      padding-left: env(safe-area-inset-left);
-      padding-right: env(safe-area-inset-right);
+    * {
       box-sizing: border-box;
-      margin: 0 auto;
-      max-width: 700px;
-      border: var(--outline-w) solid var(--teal);
-      border-radius: 14px;
-      overflow: hidden;
-      background-clip: padding-box;
-      background: linear-gradient(180deg, #0c1219 0%, #090c12 50%, #07090d 100%);
+      -webkit-tap-highlight-color: transparent;
     }
-
-    header, main, footer { box-sizing: border-box; }
-
-    header {
-      display: block;
-      background: linear-gradient(180deg, #1b2330 0%, #121824 60%, #0d111a 100%);
-      box-shadow: inset 0 -1px 0 0 color-mix(in oklab, var(--teal) 55%, black);
-    }
-
-    main {
-      position: relative;
-      background: radial-gradient(120% 85% at 50% 18%, #101622 0%, #0b0f18 55%, #070a10 100%),
-                  radial-gradient(140% 120% at 50% 100%, rgba(0,0,0,0.45), transparent 60%);
-      border-top: 1px solid var(--teal);
-      border-bottom: 1px solid var(--teal);
-      overflow: hidden;
-      isolation: isolate;
-    }
-
-    footer {
-      display: block;
-      background: linear-gradient(180deg, #121824 0%, #0f141e 50%, #0b1018 100%);
-      border-top: 1px solid var(--teal);
-      box-shadow: inset 0 1px 0 0 color-mix(in oklab, var(--teal) 55%, black);
-    }
-
-    /* ============ Rails: 6×1 empty squares at top & bottom of central game ============ */
-    .rail {
-      position: absolute;
-      left: 0; right: 0;
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      column-gap: 10px;
-      justify-items: stretch;
-      align-items: start;
-      padding: 10px 12px;
-      pointer-events: none; /* UI-only, non-interactive for now */
-      z-index: 2;
-      /* subtle glow line behind squares */
-      background: linear-gradient(90deg, transparent, color-mix(in oklab, var(--teal) 16%, transparent), transparent);
-      mix-blend-mode: screen;
-    }
-
-    .rail-top { top: 0; }
-    .rail-bottom { bottom: 0; }
-
-    .rail span {
-      display: block;
-      width: 100%;
-      height: clamp(22px, 5.5vh, 56px); /* taller */
-      border: 2px solid color-mix(in oklab, #b08900 85%, black);
-      border-radius: 8px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(0,0,0,0));
-      box-shadow: 0 0 0 1px rgba(0,0,0,0.5), inset 0 0 6px rgba(0,0,0,0.35);
-      opacity: 0.9;
-    }
-
-    /* Fallback for browsers without color-mix */
-    @supports not (color: color-mix(in oklab, white 50%, black)) {
-      header { box-shadow: inset 0 -1px 0 0 rgba(11, 93, 59, 0.55); }
-      footer { box-shadow: inset 0 1px 0 0 rgba(11, 93, 59, 0.55); }
-      .rail { background: linear-gradient(90deg, transparent, rgba(11, 93, 59, 0.16), transparent); }
-      .rail span { border-color: rgba(176, 137, 0, 0.85); }
-    }
-
-    /* ======= HUD layout (meters + counters) ======= */
-    .hud { display: grid; grid-template-columns: minmax(280px, 55%) 1fr; align-items: center; gap: 16px; padding: 0 12px; min-height: 100%; }
-
-    .counters { display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); gap: 8px 10px; margin: 0 12px 0 0; align-items: stretch; justify-items: stretch; }
-    .counter-item { display: inline-flex; align-items: center; justify-content: center; gap: 6px; padding: 6px 10px; border: 1px solid var(--teal); border-radius: 999px; font-weight: 700; font-size: 12px; color: color-mix(in oklab, white 90%, transparent); background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(0,0,0,0)); box-shadow: inset 0 0 0 1px rgba(0,0,0,0.35); width: 100%; box-sizing: border-box; }
-    .counter-item .value { min-width: 2ch; text-align: right; }
-
-    /* ======= Meters in top section (header) ======= */
-    .meters {
-      position: relative;
-      width: 100%; /* fill left grid column only */
-      max-width: none;
-      margin: 0 0 0 12px; /* align left, no vertical push */
-      display: grid;
-      row-gap: 12px; /* spacing between meters */
-      padding: 0; /* no extra vertical padding so it's height-centered */
-    }
-
-    .meter-row {
-      display: grid;
-      grid-template-columns: auto 1fr;
-      column-gap: 14px; /* space between number and bar */
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Inter", Roboto, sans-serif;
+      background: #0f172a;
+      color: #f8fafc;
+      display: flex;
+      justify-content: center;
       align-items: center;
+      min-height: 100dvh;
     }
 
-    .meter-label {
-      display: inline-flex; align-items: center; gap: 6px;
-      color: color-mix(in oklab, white 88%, transparent); /* visible numeric text */
-      font-weight: 700;
-      font-size: 12px;
-      letter-spacing: 0.3px;
-      text-shadow: 0 0 6px rgba(0,0,0,0.6);
-      min-width: 52px; /* prevents layout shift */
-      text-align: right;
-    }
-    .meter-label .icon { display: inline-block; width: 1.15em; text-align: center; }
-
-    .meter {
-      position: relative;
-      height: 10px; /* thicker meters */
-      background: color-mix(in oklab, white 8%, transparent);
-      border-radius: 2px; /* squared off */
+    .device {
+      width: 100%;
+      max-width: var(--max-phone-width);
+      height: clamp(600px, 100dvh, 900px);
+      background: #111827;
+      border-radius: var(--border-radius);
       overflow: hidden;
-      box-shadow: inset 0 0 0 1px rgba(0,0,0,0.45);
-      isolation: isolate;
+      border: 1px solid rgba(255,255,255,0.1);
+      display: flex;
+      flex-direction: column;
     }
 
-    .meter .fill {
-      position: absolute;
-      inset: 0 auto 0 0;
-      width: calc(var(--fill, .5) * 100%);
-      box-shadow: 0 0 10px color-mix(in oklab, currentColor 35%, transparent);
+    /* Slim top section for stats */
+    .top-section {
+      flex: 0 0 var(--top-height);
+      background: rgba(255,255,255,0.05);
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      padding: calc(env(safe-area-inset-top) + 8px) 12px 8px;
+      font-size: 0.8rem;
     }
 
-    /* distinct meter colors */
-    .fill.red {
-      background: linear-gradient(90deg, color-mix(in oklab, #ff3b30 85%, white), color-mix(in oklab, #ff3b30 50%, transparent));
-      color: #ff3b30;
+    .stat {
+      text-align: center;
     }
-    .fill.blue {
-      background: linear-gradient(90deg, color-mix(in oklab, #0a84ff 85%, white), color-mix(in oklab, #0a84ff 50%, transparent));
-      color: #0a84ff;
+    .stat .label {
+      color: rgba(255,255,255,0.6);
+      font-size: 0.7rem;
     }
-    .fill.orange {
-      background: linear-gradient(90deg, color-mix(in oklab, #ff9f0a 85%, white), color-mix(in oklab, #ff9f0a 50%, transparent));
-      color: #ff9f0a;
-    }
-    .fill.white {
-      background: linear-gradient(90deg, color-mix(in oklab, #ffffff 92%, white), color-mix(in oklab, #ffffff 40%, transparent));
-      color: #ffffff;
+    .stat .value {
+      font-weight: 600;
+      font-size: 0.9rem;
     }
 
-    @supports not (color: color-mix(in oklab, white 50%, black)) {
-      .meter { background: rgba(255,255,255,0.08); }
-      .fill.red { background: linear-gradient(90deg, rgba(255,59,48,0.9), rgba(255,59,48,0.5)); }
-      .fill.blue { background: linear-gradient(90deg, rgba(10,132,255,0.9), rgba(10,132,255,0.5)); }
-      .fill.orange { background: linear-gradient(90deg, rgba(255,159,10,0.9), rgba(255,159,10,0.5)); }
-      .fill.white { background: linear-gradient(90deg, rgba(255,255,255,0.95), rgba(255,255,255,0.4)); }
+    /* Middle area (game canvas placeholder) */
+    .middle-section {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: radial-gradient(circle at 50% 40%, #1e293b 0%, #0f172a 80%);
     }
+
+    .placeholder {
+      border: 2px dashed rgba(255,255,255,0.2);
+      border-radius: 16px;
+      width: 80%;
+      height: 60%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: rgba(255,255,255,0.6);
+      text-align: center;
+      font-size: 0.8rem;
+    }
+
+    /* Large bottom section for round buttons */
+    .bottom-section {
+      flex: 0 0 var(--bottom-height);
+      background: rgba(255,255,255,0.05);
+      border-top: 1px solid rgba(255,255,255,0.08);
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
+    }
+
+    .round-btn {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.15);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1rem;
+      color: #fff;
+      user-select: none;
+      touch-action: manipulation;
+      transition: transform 0.1s ease;
+    }
+    .round-btn:active {
+      transform: scale(0.94);
+      background: rgba(255,255,255,0.12);
+    }
+
   </style>
 </head>
 <body>
-  <div class="app">
-    <header>
-      <div class="hud">
-        <div class="meters" aria-hidden="false" role="group" aria-label="Status meters">
-        <div class="meter-row">
-          <span class="meter-label" aria-label="Health"><span class="icon">❤️</span>50/100</span>
-          <div class="meter"><span class="fill red" style="--fill: .5"></span></div>
-        </div>
-        <div class="meter-row">
-          <span class="meter-label" aria-label="Armor"><span class="icon">🛡️</span>70/100</span>
-          <div class="meter"><span class="fill blue" style="--fill: .7"></span></div>
-        </div>
-        <div class="meter-row">
-          <span class="meter-label" aria-label="Magic"><span class="icon">✨</span>30/100</span>
-          <div class="meter"><span class="fill orange" style="--fill: .3"></span></div>
-        </div>
-        <div class="meter-row">
-          <span class="meter-label" aria-label="Spirit"><span class="icon">🕊️</span>90/100</span>
-          <div class="meter"><span class="fill white" style="--fill: .9"></span></div>
-        </div>
-        </div>
-        <div class="counters" aria-label="Resources" role="group">
-          <div class="counter-item" aria-label="Gold">🪙<span class="value">1,234</span></div>
-          <div class="counter-item" aria-label="Experience">⭐<span class="value">5,678</span></div>
-          <div class="counter-item" aria-label="Crystals">💎<span class="value">42</span></div>
-          <div class="counter-item" aria-label="Materials">🧱<span class="value">128</span></div>
-        </div>
+  <main class="device">
+    <!-- Slim Top -->
+    <header class="top-section">
+      <div class="stat">
+        <div class="label">HP</div>
+        <div class="value">100</div>
+      </div>
+      <div class="stat">
+        <div class="label">SCORE</div>
+        <div class="value">000250</div>
+      </div>
+      <div class="stat">
+        <div class="label">LEVEL</div>
+        <div class="value">3</div>
       </div>
     </header>
-    <main id="stage">
-      <!-- Top 6×1 empty squares -->
-      <div class="rail rail-top" aria-hidden="true">
-        <span></span><span></span><span></span><span></span><span></span><span></span>
-      </div>
-      <!-- Bottom 6×1 empty squares -->
-      <div class="rail rail-bottom" aria-hidden="true">
-        <span></span><span></span><span></span><span></span><span></span><span></span>
-      </div>
-    </main>
-    <footer></footer>
-  </div>
 
-  <script>
-    function setAppHeight(){
-      const h = window.innerHeight;
-      document.documentElement.style.setProperty('--app-height', h + 'px');
-    }
-    setAppHeight();
-    window.addEventListener('resize', setAppHeight);
-    window.addEventListener('orientationchange', setAppHeight);
-    if ('virtualKeyboard' in navigator) {
-      try { navigator.virtualKeyboard.overlaysContent = true; } catch(e){}
-    }
-  </script>
+    <!-- Middle (Game Area Placeholder) -->
+    <section class="middle-section">
+      <div class="placeholder">GAME AREA</div>
+    </section>
+
+    <!-- Large Bottom -->
+    <nav class="bottom-section">
+      <div class="round-btn">A</div>
+      <div class="round-btn">B</div>
+      <div class="round-btn">C</div>
+    </nav>
+  </main>
 </body>
 </html>
